--- a/package.json
+++ b/package.json
@@ -2,12 +2,59 @@
     "name": "exp-core",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+    "type": "module",
+    "main": "./dist/index.cjs",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./dist/index.d.mts",
+                "default": "./dist/index.mjs"
+            },
+            "require": {
+                "types": "./dist/index.d.cts",
+                "default": "./dist/index.cjs"
+            }
+        }
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "packageManager": "pnpm@10.7.0"
+    "files": [
+        "dist/",
+        "tsconfig.json"
+    ],
+    "scripts": {
+        "clean": "rm -rf dist",
+        "build:cjs": "esbuild --platform=node --bundle --target=es2022 --format=cjs --outfile=dist/index.cjs src/index.ts",
+        "build:esm": "esbuild --platform=node --bundle --target=es2022 --format=esm --outfile=dist/index.mjs src/index.ts",
+        "build:types": "dts-bundle-generator --out-file=dist/index.d.ts src/index.ts && cp dist/index.d.ts dist/index.d.cts && cp dist/index.d.ts dist/index.d.mts",
+        "build": "pnpm run clean && pnpm run build:cjs && pnpm run build:esm && pnpm run build:types",
+        "spell": "cspell lint .",
+        "format.check": "prettier . --check",
+        "format": "prettier . --write",
+        "lint": "eslint ./src/"
+    },
+    "keywords": [
+        "exp-core",
+        "express",
+        "utils",
+        "helpers",
+        "express-logger"
+    ],
+    "author": "Shakti Ranjan Debata <debatashaktiranjan@gmail.com>",
+    "repository": "d-shaktiranjan/exp-core",
+    "homepage": "https://github.com/d-shaktiranjan/exp-core/blob/main/README.md",
+    "license": "MIT",
+    "devDependencies": {
+        "@eslint/js": "^9.24.0",
+        "@types/express": "^5.0.1",
+        "cspell": "^8.18.1",
+        "dts-bundle-generator": "^9.5.1",
+        "esbuild": "^0.25.2",
+        "eslint": "^9.24.0",
+        "globals": "^16.0.0",
+        "prettier": "^3.5.3",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.29.1"
+    },
+    "packageManager": "pnpm@10.6.4"
 }
