--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "exp-core",
-    "version": "1.0.0",
+    "version": "1.0.1-test.1",
     "description": "",
     "type": "module",
     "main": "./dist/index.cjs",
