chore: add description and enhance keywords in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "exp-core",
     "version": "1.1.0",
-    "description": "",
+    "description": "Core utilities and middleware for building robust Express applications, including standard API responses, async error handling, request sanitization, and extended request types.",
     "type": "module",
     "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
@@ -38,7 +38,21 @@
         "express",
         "utils",
         "helpers",
-        "express-logger"
+        "express-logger",
+        "express-middleware",
+        "express-utils",
+        "api-response",
+        "success-response",
+        "error-response",
+        "async-wrapper",
+        "api-error",
+        "request-validation",
+        "typescript",
+        "express5",
+        "express-core",
+        "custom-error",
+        "request-body-initializer",
+        "auth-request"
     ],
     "author": "Shakti Ranjan Debata <debatashaktiranjan@gmail.com>",
     "repository": "d-shaktiranjan/exp-core",
